--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,4 @@
-$text-color: #2c2a28;
-
-@mixin transition {
-    transition: all 0.5s ease-out;
-}
-
-@mixin transition2 {
-    transition: all 0.5s ease-in-out;
-}
-
-@font-face {
-    font-family: "Lato-Light";
-  
-    src: url("../fonts/9625.woff") format("woff"), /* Modern Browsers */
-      url("../fonts/9625.woff2") format("woff2"); /* Modern Browsers */
-    font-weight: normal;
-    font-style: normal;
-  }
+@import "config";
 
 .visually-hidden {
 	position: absolute !important;
@@ -43,16 +26,20 @@ body {
     background-size: cover;
 }
 
-.index {
-    overflow: hidden;
-}
+// .index {
+//     overflow: hidden;
+// }
 
 .logo {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
     margin-bottom: 20px;
+    width: 713px;
+    height: 203px;
+    background-image: url(../img/logo.png);
+    background-position: center;
+    background-size: 713px 203px;
 }
 
 .navigation-list{ 
@@ -178,3 +165,5 @@ body {
 .icon-gmail {
     background-image: url(../img/icon_gmail.svg);
 }
+
+@import "mobile";
