--- a/css/main.css
+++ b/css/main.css
@@ -184,16 +184,22 @@ body {
 
 @media screen and (max-width: 500px) {
   .logo {
-    width: 250px;
-    height: 71px;
-    background-size: 250px 71px;
+    width: 300px;
+    height: 86px;
+    background-size: 300px 86px;
   }
   .navigation-list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    height: 230px;
     width: 250px;
+  }
+  .navigation-list-item {
+    padding: 0 15px;
+    border: 1px solid rgba(128, 128, 128, 0.685);
+    border-radius: 10px;
   }
 }
 /*# sourceMappingURL=main.css.map */
