--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -17,13 +17,20 @@
 //Smartphones
 @include mediaSm {
     .logo {
-        width: 250px;
-        height: 71px;
-        background-size: 250px 71px;
+        width: 300px;
+        height: 86px;
+        background-size: 300px 86px;
     }
 
     .navigation-list {
         flex-direction: column;
+        height: 230px;
         width: 250px;
+    }
+
+    .navigation-list-item {
+        padding: 0 15px;
+        border: 1px solid rgba(128, 128, 128, 0.685);
+        border-radius: 10px;
     }
 }
