--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,70 @@
   font-style: normal;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.about-info {
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 80px;
+  width: 850px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 5fr 1fr 5fr;
+      grid-template-columns: 5fr 1fr 5fr;
+  -ms-grid-rows: 5fr 1fr 5fr;
+      grid-template-rows: 5fr 1fr 5fr;
+  grid-auto-rows: minmax(420px, auto);
+  grid-auto-columns: minmax(400px, auto);
+}
+
+.about-info img {
+  display: block;
+  border-radius: 50%;
+}
+
+.footer-inner {
+  margin-bottom: 30px;
+}
+
+.img-element1 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+}
+
+.img-element2 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+}
+
+.text-element2 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+  padding-left: 40px;
+  padding-right: 60px;
+}
+
+.text-element1 {
+  padding-bottom: 30px;
+  padding-right: 20px;
+}
+
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
