--- a/css/main.css
+++ b/css/main.css
@@ -6,70 +6,6 @@
   font-style: normal;
 }
 
-p {
-  margin: 0;
-  padding: 0;
-}
-
-.about-info {
-  margin: 0;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 80px;
-  width: 850px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 5fr 1fr 5fr;
-      grid-template-columns: 5fr 1fr 5fr;
-  -ms-grid-rows: 5fr 1fr 5fr;
-      grid-template-rows: 5fr 1fr 5fr;
-  grid-auto-rows: minmax(420px, auto);
-  grid-auto-columns: minmax(400px, auto);
-}
-
-.about-info img {
-  display: block;
-  border-radius: 50%;
-}
-
-.footer-inner {
-  margin-bottom: 30px;
-}
-
-.img-element1 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1/3;
-}
-
-.img-element2 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 2;
-  grid-row: 2/4;
-}
-
-.text-element2 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  padding-left: 40px;
-  padding-right: 60px;
-}
-
-.text-element1 {
-  padding-bottom: 30px;
-  padding-right: 20px;
-}
-
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -94,6 +30,10 @@ body {
   background-color: #fff;
   background-image: url(../img/background.jpg);
   background-size: cover;
+}
+
+.inner-main {
+  min-height: calc(100vh - 424px);
 }
 
 .logo {
@@ -246,7 +186,91 @@ body {
   background-image: url(../img/icon_gmail.svg);
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.about-info {
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 80px;
+  width: 850px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 5fr 1fr 5fr;
+      grid-template-columns: 5fr 1fr 5fr;
+  -ms-grid-rows: 5fr 1fr 5fr;
+      grid-template-rows: 5fr 1fr 5fr;
+  grid-auto-rows: minmax(420px, auto);
+  grid-auto-columns: minmax(400px, auto);
+}
+
+.about-info img {
+  display: block;
+  border-radius: 50%;
+}
+
+.footer-inner {
+  margin-bottom: 30px;
+}
+
+.img-element1 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+}
+
+.img-element2 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+}
+
+.text-element2 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+  padding-left: 40px;
+  padding-right: 60px;
+}
+
+.text-element1 {
+  padding-bottom: 30px;
+  padding-right: 20px;
+}
+
+.contacts {
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 850px;
+  text-align: center;
+}
+
+.contacts-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 500px) {
+  img {
+    width: 100%;
+    height: auto;
+  }
   .logo {
     width: 300px;
     height: 86px;
@@ -264,6 +288,44 @@ body {
     padding: 0 15px;
     border: 1px solid rgba(128, 128, 128, 0.685);
     border-radius: 10px;
+  }
+  .contacts {
+    width: 300px;
+  }
+  .about-info {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    width: 300px;
+    grid-auto-rows: minmax(300px, auto);
+    grid-row-gap: 15px;
+  }
+  .text-element1 {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    padding: 0;
+  }
+  .img-element1 {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 1;
+    grid-row: 1;
+    padding: 0;
+  }
+  .img-element2 {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 3;
+    grid-row: 3;
+    padding: 0;
+  }
+  .text-element2 {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 4;
+    grid-row: 4;
+    padding: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
