--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -16,6 +16,11 @@
 
 //Smartphones
 @include mediaSm {
+
+    .current {
+        background-color: rgba(163, 163, 163, 0.103);
+    }
+
     img {
         width: 100%;
         height: auto;
@@ -31,12 +36,19 @@
         flex-direction: column;
         height: 230px;
         width: 250px;
+        background-color: transparent;
+
     }
 
-    .navigation-list-item {
+    .navigation-list-item a {
+        min-width: 120px;
         padding: 0 15px;
         border: 1px solid rgba(128, 128, 128, 0.685);
         border-radius: 10px;
+
+        &::after {
+            height: 0;
+        }
     }
 
     .contacts {
