--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,14 @@ body {
     min-height: calc(100vh - 424px);
 }
 
+.current-item {
+    pointer-events: none;
+}
+
+.current {
+    border-bottom: 1px solid black;
+}
+
 .logo {
     margin-left: auto;
     margin-right: auto;
