--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,15 @@ body {
   background-size: cover;
 }
 
+.index-body {
+  overflow-y: scroll;
+}
+
+.inner-body {
+  background-image: none;
+  background-color: #fff;
+}
+
 .inner-main {
   min-height: calc(100vh - 424px);
 }
