--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,15 @@ body {
     background-size: cover;
 }
 
+.index-body {
+    overflow-y: scroll;
+}
+
+.inner-body {
+    background-image: none;
+    background-color: #fff;
+}
+
 .inner-main {
     min-height: calc(100vh - 424px);
 }
