--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,17 +26,18 @@ body {
     background-size: cover;
 }
 
-.index-body {
+.index-body,
+.inner-body {
     overflow-y: scroll;
 }
 
 .inner-body {
     background-image: none;
-    background-color: #fff;
 }
 
-.inner-main {
-    min-height: calc(100vh - 424px);
+.inner-main,
+.index-main {
+    min-height: calc(100vh - 395px);
 }
 
 .current-item {
@@ -128,7 +129,7 @@ body {
     margin: 0;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 80px;
+    margin-bottom: 1px;
     border-radius: 10px;
     @include transition;
 
