--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -21,9 +21,9 @@ p {
     }
 }
 
-.footer-inner {
-    margin-bottom: 30px;
-}
+// .footer-inner {
+//     margin-bottom: 30px;
+// }
 
 .img-element1 {
     grid-column: 2/4;
