--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,10 @@ body {
   background-size: cover;
 }
 
+footer {
+  padding-top: 30px;
+}
+
 .index-body,
 .inner-body {
   overflow-y: scroll;
@@ -43,7 +47,7 @@ body {
 
 .inner-main,
 .index-main {
-  min-height: calc(100vh - 395px);
+  min-height: calc(100vh - 445px);
 }
 
 .current-item {
