--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,10 @@ body {
     background-size: cover;
 }
 
+footer {
+    padding-top: 30px;
+}
+
 .index-body,
 .inner-body {
     overflow-y: scroll;
@@ -37,7 +41,7 @@ body {
 
 .inner-main,
 .index-main {
-    min-height: calc(100vh - 395px);
+    min-height: calc(100vh - 445px);
 }
 
 .current-item {
