--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,11 @@ body {
   background-size: cover;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 footer {
   padding-top: 30px;
 }
@@ -259,8 +264,7 @@ p {
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3/4;
-  padding-left: 40px;
-  padding-right: 60px;
+  padding-left: 100px;
 }
 
 .text-element1 {
@@ -294,16 +298,54 @@ p {
   text-decoration: none;
 }
 
+@media screen and (max-width: 768px) {
+  .about-info {
+    width: 720px;
+    grid-auto-rows: minmax(320px, auto);
+    grid-auto-columns: minmax(320px, auto);
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    padding: 0 20px;
+  }
+  .text-element1 {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 1;
+    grid-row: 1;
+    padding: 0;
+  }
+  .text-element2 {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-grid-row: 2;
+    grid-row: 2;
+    padding-left: 20px;
+  }
+  .img-element1 {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-grid-row: 1;
+    grid-row: 1;
+  }
+  .img-element2 {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+  .contacts {
+    width: 720px;
+  }
+}
+
 @media screen and (max-width: 500px) {
   footer {
     padding-top: 60px;
   }
   .current {
     background-color: rgba(163, 163, 163, 0.103);
-  }
-  img {
-    width: 100%;
-    height: auto;
   }
   .logo {
     width: 300px;
