--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -11,7 +11,41 @@
 
 //Tablets & Small Laptops
 @include mediaMd {
-   
+
+   .about-info {
+       width: 720px;
+       grid-auto-rows: minmax(320px, auto);
+       grid-auto-columns: minmax(320px, auto);
+       grid-template-columns: 1fr 1fr;
+       grid-template-rows: 1fr 1fr;
+       padding: 0 20px;
+   }
+
+   .text-element1 {
+        grid-column: 1;
+        grid-row: 1;
+        padding: 0;
+    }
+
+    .text-element2 {
+        grid-column: 2;
+        grid-row: 2;
+        padding-left: 20px;
+    }
+
+    .img-element1 {
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    .img-element2 {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    .contacts {
+        width: 720px;
+    }
 }
 
 //Smartphones
@@ -23,11 +57,6 @@
 
     .current {
         background-color: rgba(163, 163, 163, 0.103);
-    }
-
-    img {
-        width: 100%;
-        height: auto;
     }
 
     .logo {
