--- a/scss/main.scss
+++ b/scss/main.scss
@@ -90,11 +90,16 @@ footer {
     min-width: 110px;
     padding: 0 15px;
 
-    &:hover a::after {
+    &:hover a::after,
+    &:focus a::after {
         width: 100%;
     }
     
     a {
+        &:focus::after {
+            width: 100%;
+        }
+
         color: $text-color;
         text-decoration: none;
         position: relative;
@@ -142,7 +147,8 @@ footer {
     border-radius: 10px;
     @include transition;
 
-    &:hover {
+    &:hover,
+    &:focus {
         background-color:  rgba(163, 163, 163, 0.151);
         color: #000;
         border-color: #000;
@@ -171,7 +177,9 @@ footer {
         background-repeat: no-repeat;
         opacity: 0.3;
         @include transition;
-        &:hover {
+
+        &:hover,
+        &:focus {
             opacity: 0.8;
         }
     }
