--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -51,8 +51,28 @@
 //Smartphones
 @include mediaSm {
 
+    .signup {
+        width: 300px;
+    }
+
     footer {
+        min-height: 100px;
         padding-top: 60px;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .footer-inner--signup {
+        min-height: 40px;
+    }
+
+    .button-signup {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .social-list {
+        margin-right: auto;
     }
 
     .current {
