--- a/scss/main.scss
+++ b/scss/main.scss
@@ -174,6 +174,10 @@ footer {
     margin-right: 0;
 }
 
+.social-list--signup {
+    margin-right: auto;
+}
+
 footer {
     display: flex;
     padding-bottom: 30px;
@@ -216,4 +220,5 @@ footer {
 
 @import "about";
 @import "contacts";
+@import "signup";
 @import "mobile";
