--- a/css/main.css
+++ b/css/main.css
@@ -346,6 +346,9 @@ p {
 }
 
 .sign-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-top: 30px;
 }
 
@@ -392,6 +395,16 @@ p {
 }
 
 @media screen and (max-width: 500px) {
+  .sign-buttons {
+    min-height: 90px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
   .signup {
     width: 300px;
   }
