--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -51,6 +51,12 @@
 //Smartphones
 @include mediaSm {
 
+    .sign-buttons {
+        min-height: 90px;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
     .signup {
         width: 300px;
     }
