--- a/scss/_signup.scss
+++ b/scss/_signup.scss
@@ -17,3 +17,9 @@
     display: flex;
     margin-top: 30px;
 }
+
+.captcha {
+    align-self: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
