--- a/css/main.css
+++ b/css/main.css
@@ -352,6 +352,14 @@ p {
   margin-top: 30px;
 }
 
+.captcha {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 @media screen and (max-width: 768px) {
   .about-info {
     width: 720px;
