--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -57,9 +57,13 @@
         margin-top: -150px;
         top: 30%;
 
+        h2 {
+            margin-left: -40px;
+        }
+
         .close {
-            top: 5px;
-            right: 5px;
+            top: 20px;
+            right: 10px;
         }
     }
 
