--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,16 +57,36 @@ footer {
     border-bottom: 1px solid black;
 }
 
-.logo {
-    margin-left: auto;
-    margin-right: auto;
+.logo-link {
+    display: block;
     margin-top: 30px;
     margin-bottom: 20px;
+    margin-left:auto;
+    margin-right: auto;
     width: 713px;
     height: 203px;
     background-image: url(../img/logo.png);
     background-position: center;
     background-size: 713px 203px;
+}
+
+.logo-link-index {
+    display: block;
+    background-image: none;
+}
+
+.overlay2 {
+    display: none;
+    content: "";
+    position: fixed;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .navigation-list{ 
