убрал кнопку меню с десктопа

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,12 +1,15 @@
 //Widescreens
 @include mediaXL {
-   
+    .menu-button {
+        display: none;
+   }
 }
 
 //Desktops & Laptops
 @include mediaLg {
-   
-    
+   .menu-button {
+        display: none;
+   }
 }
 
 //Tablets & Small Laptops
