--- a/css/main.css
+++ b/css/main.css
@@ -513,6 +513,18 @@ p {
           animation: bounce 0.5s;
 }
 
+@media screen and (min-width: 1171px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  .menu-button {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .about-info {
     width: 720px;
