--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -128,6 +128,7 @@
         border: 0;
         font: inherit;
         text-transform: uppercase;
+        color: $text-color;
     }
 
     .main-link {
@@ -135,6 +136,7 @@
         left: 20px;
         text-decoration: none;
         width: 100px;
+        color: $text-color;
     }
 
     .navigation-list {
