--- a/css/main.css
+++ b/css/main.css
@@ -670,6 +670,9 @@ p {
   .navigation-list-item a::after {
     height: 0;
   }
+  .current {
+    background-color: rgba(163, 163, 163, 0.445);
+  }
   .show-menu {
     display: -webkit-box;
     display: -ms-flexbox;
