--- a/scss/_signup.scss
+++ b/scss/_signup.scss
@@ -18,6 +18,13 @@
         border-radius: 10px;
         box-shadow: 2px 2px 5px rgba(138, 137, 137, 0.472);
     }
+
+    textarea {
+        padding: 5px 15px;
+        border: 1px solid rgb(138, 137, 137);
+        border-radius: 10px;
+        box-shadow: 2px 2px 5px rgba(138, 137, 137, 0.472);
+    }
 }
 
 .signup-form {
